[Calendar] Changing the default calendar to the list view when on mobile to make sure that the users have the most optimal view for their device + css fix for list view + minimal width for month view to make sure that the month view can be viewed decently on a mobile screen (by scrolling horizontally)

--- a/src/Chamilo/Libraries/Calendar/Resources/Css/Aqua/Stylesheet.css
+++ b/src/Chamilo/Libraries/Calendar/Resources/Css/Aqua/Stylesheet.css
@@ -440,7 +440,7 @@ h4 .calendar-event-range {
 	{
 	color: dimgray;
 	font-size: 12px;
-	height: 20px;
+	min-height: 20px;
 }
 
 .event-container-hidden {
@@ -514,4 +514,14 @@ h4 .calendar-event-range {
 .tooltip-calendar .tooltip-event-prefix,
 .tooltip-calendar .tooltip-event-postfix {
 	color: dimgray;
+}
+
+@media screen and (max-width: 900px) {
+	.month-calendar {
+		overflow: auto;
+	}
+
+	.table-calendar-month {
+		min-width: 900px;
+	}
 }
